fixed resize problem and set overflow to hide

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,28 @@
 
 html {
-    background-image: url("background.jpg");
-   background-size: cover;
+
+  background: url("background.jpg") no-repeat center center fixed;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  width: 100%;
+  overflow: hidden;
+  margin: 0;
 }
 
-.body {
-  height: 100%;
+body {
+  margin: 0;
+}
 
+
+
+.application {
+  width: 100%;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  border: none;
 }
 
 .Buttons {
@@ -17,18 +33,10 @@ html {
   font-size: 150%;
 }
 
-.application {
-  width: 100%;
-  height: 100vh;
-  padding: 0;
-  margin: 0;
-  border: none;
-}
-
 .fullContainer {
   position: relative;
   top: 20%;
-  left: 32%;
+  left: 30%;
   font-size: 150%;
 }
 
